<resources>
    <string name="app_name">Personal Finance App</string>
    <string name="appTitle">Frisbee Dog Finance</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="launchDescription">This is your first time using the app, please fill out the required forms to proceed.</string>
    <string name="firstName">Type your first name here...</string>
    <string name="surName">Type your surname here...</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="income">Income:</string>
    <string name="hide">Hide</string>

    <string-array name="expenditureTypes">
        <item>Food</item>
        <item>Leisure</item>
        <item>Travel</item>
        <item>Accommodation</item>
        <item>Other</item>
    </string-array>

    <string-array name="incomeTypes">
        <item>Salery</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenditure">Expenditure:</string>
    <string name="transactions">Transactions:</string>
    <string name="totalExpenditure">Total expenditure:</string>
    <string name="revenue">Revenue:</string>
</resources>