<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dogView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            app:srcCompat="@drawable/frisbeedog" />

        <TextView
            android:id="@+id/applicationTitleView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:text="@string/appTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/beach"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBtnView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/heavy_blue"
                android:text="@string/login" />

            <Button
                android:id="@+id/createAccountBtnView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/heavy_blue"
                android:text="@string/createAccount" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>